--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#">Our Team</a>
+                        <a class="nav-link active" href="#ourteam">Our Team</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,7 +58,7 @@
         </section>
     </header>
     <main>
-        <!--  -->
+        <!-- slide section -->
         <section class="color-bag">
             <div class="container">
                 <div class="row align-items-center justify-content-between py-5">
@@ -72,8 +72,50 @@
                 </div>
             </div>
         </section>
+        <!-- time section -->
+        <section>
+            <div class="py-5 container">
+                <h2 class="text-center fw-bold text-info">24/7 Service</h2>
+                <p>A free 24/7 text service, providing everything from a calming chat to immediate support for people going through a mental health or emotional crisis.If you are being supported by a mental health team, or have been in the past, contact the service for support in a crisis.</p>
+            </div>
+        </section>
 
-
+        <section>
+            <div class="container py-3" id="ourteam">
+                <h2 class="fw-bold text-center text-info">OUR TEAM</h2>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://aawafi.com/uploads/partners/profile/doctor.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title fw-bold text-info">Merenda Yasi</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://i2-prod.mirror.co.uk/interactives/article12645227.ece/ALTERNATES/s1200c/doctor.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title fw-bold text-info">Jhone Delay</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://cdn3.poz.com/24954_Doctor-Patient-iStock-92723315-XLARGE.jpg_67e4ea75-849c-419d-b32b-8970f8ae05a7_x2.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title fw-bold text-info">Guoiy Faset</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
